<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/id"
        android:textAlignment="center"
        android:background="?attr/colorPrimary"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/nameSt"
        android:textAlignment="center"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/surnameSt"
        android:background="?attr/colorPrimary"/>

</LinearLayout>