<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/number"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/capacity" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/beds" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/price" />

</LinearLayout>