<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A88484">

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/id"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:layout_weight="35"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="R" />

    <TextView
        android:id="@+id/from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:layout_weight="100"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/fromDate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:layout_weight="5"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="-"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:layout_weight="100"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/toDate" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:layout_weight="115"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:paddingHorizontal="2dp"
        android:text="@string/guest" />

</LinearLayout>